# adcs-on-board-software

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  doxygen.conf  main.cpp
AFL/: CMakeLists.txt  fuzz.sh
aflplusplus/: .gitignore  CMakeLists.txt  README.md  _re-tmin.sh  _tmin.sh  clean.sh  cmin.sh  fuzz.sh  instrument.sh  launch-screen.sh  minimize-corpus.sh  minimize-testcases.sh  quit-screen.sh  re-tmin.sh  refuzz.sh  setup.sh  stop-fuzz.sh  tmin.sh  triage.sh
aflplusplus/build-cov/: aflplusplus.REMOVED.git-id
aflplusplus/scripts/: _cmin.sh  _cov.sh  _re-tmin.sh  _retmin.sh  _tmin.sh  build-cov.sh  cmin.sh  cov.sh  fuzz.sh  instrument.sh  launch-screen.sh  quit-screen.sh  re-tmin.sh  refuzz.sh  retmin.sh  setup.sh  stop-fuzz.sh  tmin.sh  triage.sh
aflplusplus/scripts/util/: clean.sh  format.sh
aflplusplus/tests/: ToTest.cpp
cmake/: ATSAM.cmake  Native.cmake  common.cmake
inc/: Albedo.h  Albedo.hpp  Bdot.h  Bdot.hpp  CSSCompensation.hpp  Definitions.h  Definitions.hpp  Detumbling.hpp  EcefToLlh.hpp  EciToEcef.h  EciToEcef.hpp  Eclipse.hpp  EnvironmenralModel.hpp  EnvironmentalModel.hpp  GyroBiasFunction.hpp  InitializationsForNominal.hpp  MEKF.h  MEKF.hpp  MagnetorquerOnly.h  MagnetorquerOnly.hpp  MagnetorquerPlusRW.h  MagnetorquerPlusRW.hpp  MathFunctions.hpp  MeasurementsForNominal.hpp  MeasurmentsForNominal.hpp  NadirPointing.h  NadirPointing.hpp  Nominal.hpp  NominalToDetumblingTrigger.h  OrbitalParameters.hpp  Parameters.hpp  Pointing.h  Pointing.hpp  PointingStrategy.h  PointingStrategy.hpp  PointingTarget.h  PointingTarget.hpp  RestoreReflectivityData.hpp  SatelliteModel.h  SatelliteModel.hpp  (+7 more)
inc/Attitude/: Bdot.hpp  MEKF.hpp  NadirPointing.hpp  OrbitalParameters.hpp  TLEUtils.hpp  Wahba.hpp
lib/FreeRTOS/Source/portable/MemMang/: heap_4.c
lib/SGP4/: sgp4.cpp  sgp4.h
lib/geomag/: Geomag.cpp  Geomag.h  Geomag.hpp  GeomagVector.c  geomag.cpp
src/: Albedo.cpp  Bdot.cpp  CSSCompensation.cpp  Detumbling.cpp  EcefToLlh.cpp  EciToEcef.cpp  Eclipse.cpp  EnvironmentalModel.cpp  GyroBiasFunction.cpp  InitializationsForNominal.cpp  MEKF.cpp  MagnetorquerOnly.cpp  MagnetorquerPlusRW.cpp  MathFunctions.cpp  MeasurmentsForNominal.cpp  NadirPointing.cpp  Nominal.cpp  NominalToDetumblingTrigger.cpp  OrbitalParameters.cpp  Pointing.cpp  PointingStrategy.cpp  PointingTarget.cpp  RestoreReflectivityData.cpp  SatelliteModel.cpp  SunPointing.cpp  SunPosition.cpp  Wahba.cpp  app.h  cssCompensation.cpp  main.c  mathFunctions.cpp  wahba.cpp
src/Attitude/: CSSCompensation.cpp  EnvironmentalModel.cpp  Pointing.cpp
test/: AlbedoTest.cpp  BdotTest.cpp  CSSCompensationTest.cpp  CartesianToSphericalTest.cpp  ControlTest.cpp  Date2decimalTest.cpp  Deg2radTest.cpp  DetumblingTest.cpp  EcefToLlhTest.cpp  EciToEcefTest.cpp  EclipseTest.cpp  EnvironmentalModekTest.cpp  EnvironmentalModelTest.cpp  GeomagTest.cpp  MEKFTest.cpp  MagnetorquerOnlyTest.cpp  MagnetorquerPlusRWTest.cpp  MathFunctionsTests.cpp  Measurements.hpp  MeasurementsForNominal.hpp  MeasurementsForNominalTest.cpp  NadirPointingTest.cpp  NominalTest.cpp  OrbitalParametersTest.cpp  QuaternionExponentTest.cpp  QuaternionProductTest.cpp  Rad2degTest.cpp  RestoreReflectivityDataTest.cpp  RotateVectorTest.cpp  SGP4Test.cpp  SkewTest.cpp  SphericalToCartesianTest.cpp  SunPointingTest.cpp  SunPositionTest.cpp  WahbaTest.cpp  calculateCellAreaTest.cpp  cartesianToSphericalTest.cpp  controlTest.cpp  cssCompensationTest.cpp  date2decimalTest.cpp  (+20 more)
util/: clean.sh
